--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="recipes$ | async as recipes" class="card">
   <div>{{recipes.length}} Results</div>
-  <p-dataView #dv [value]="recipes" [paginator]="true" [rows]="9" filterBy="name" layout="grid">
+  <p-dataView #dv [value]="filteredRecipes" [paginator]="true" [rows]="9" filterBy="name" layout="grid">
     <ng-template let-recipe pTemplate="gridItem">
       <div class="p-col-12 p-md-3">
         <div class="recipe-grid-item card">
