--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,57 @@ a {
   top: 0px;
 }
 
+.rp-data-view  {
+  min-width: 500px;
+}
+
+.rp-filters {
+  width: 245px;
+  padding: 32px;
+  left:32px;
+}
+
+.row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+.rp-filters-group {
+  height: 600px;
+  width: 180px;
+  border-color: #dee2e6 !important;
+  // padding-top: 50px;
+}
+
+.rp-filter-button button.p-button, .rp-filter-button  .p-button:enabled:active {
+  background:  #f71e68;
+  border-color: #f71e68;
+  padding: 2.5px !important;
+  float: right;
+  margin-bottom: 30px
+}
+
+.rp-filter-button {
+height: 50px;
+}
+
+
+input {
+  margin-bottom: 25px;
+}
+
+
+.logo {
+  width: 39.6px;
+  height: 39.6px;
+}
+
+.header-menu-item button.p-button {
+  background: transparent !important;
+  border: 1px solid transparent !important;
+}
 
 .right-zone {
   float: right;
@@ -52,15 +103,4 @@ a {
   float: left;
   vertical-align: middle;
   padding: 15px;
-}
-
-
-.header-menu-item button.p-button {
-  background: transparent !important;
-  border: 1px solid transparent !important;
-}
-
-.logo {
-  width: 39.6px;
-  height: 39.6px;
 }
